# redis-monitor

./: Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: commands.rs  config.rs  connection.rs  filter.rs  main.rs  monitor.rs  output.rs  scratch.rs  stats.rs
