[package]
name = "redis-monitor"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
colored = "3.0.0"
config = { version = "0.15.18", features = ["toml"] }
csv = "1.3.1"
flume = "0.11.1"
futures = "0.3.31"
lexical-core = "1.0.6"
memchr = "2.7.6"
nom = "8.0.0"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tls", "tokio-native-tls-comp", "aio", "connection-manager", "tokio-comp"] }
regex = "1.11.3"
rustls = "0.23.32"
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.4"
url = "2.5.7"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = false
panic = "abort"

[profile.release.package.memchr]
opt-level = 3
