[package]
name = "redis-monitor"
version = "0.1.2"
edition = "2024"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
clap_complete = "4.5.60"
colored = "3.0.0"
config = { version = "0.15.18", features = ["toml"] }
csv = "1.4.0"
flume = "0.11.1"
futures = "0.3.31"
lexical-core = "1.0.6"
memchr = "2.7.6"
nom = "8.0.0"
rand = "0.9.2"
#redis = { version = "0.32.7", features = ["tls", "tokio-native-tls-comp", "aio", "connection-manager", "tokio-comp"] }
redis = { version = "0.32.7", default-features = false, features = [
  "aio",
  "connection-manager",
  "tokio-comp",
  "tls-rustls",
  "tokio-rustls-comp",
  # optional: bake in Mozilla roots instead of using OS store:
  # "tls-rustls-webpki-roots",
] }
regex = "1.12.2"
rustls = "0.23.35"
rustls-native-certs = "0.8.2"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
serde_php = "0.5.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
url = "2.5.7"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = false
panic = "abort"
