[package]
name = "redis-monitor"
version = "0.1.2"
edition = "2024"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.102"
arcstr = "1.2.0"
bitflags = "2.11.0"
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
clap_complete = "4.5.66"
colored = "3.1.1"
config = { version = "0.15.19", features = ["toml"] }
csv = "1.4.0"
flume = "0.12.0"
futures = "0.3.32"
lexical-core = "1.0.6"
memchr = "2.8.0"
nom = "8.0.0"
rand = "0.10.0"
redis = { version = "1.0.4", default-features = false, features = [
  "aio",
  "connection-manager",
  "tokio-comp",
  "tls-rustls",
  "tokio-rustls-comp",
  # optional: bake in Mozilla roots instead of using OS store:
  # "tls-rustls-webpki-roots",
] }
regex = "1.12.3"
rustls = "0.23.36"
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
serde_php = "0.5.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = "0.26.4"
url = "2.5.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = false
panic = "abort"

[profile.release-static]
inherits = "release"
